<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zeywox</groupId>
    <artifactId>veyronix</artifactId>
    <name>veyronix</name>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>veyronix-core</module>
    </modules>

    <properties>
        <java.version>24</java.version>
        <spring.boot.version>3.5.5</spring.boot.version>
        <spring.cloud.version>2025.0.0</spring.cloud.version>
        <jetty.version>11.0.24</jetty.version>
        <testcontainers.redis.version>1.6.4</testcontainers.redis.version>

    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.redis</groupId>
                <artifactId>testcontainers-redis</artifactId>
                <version>2.2.4</version>
                <!--                <version>${testcontainers.redis.version}</version>-->
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.redis.testcontainers</groupId>
                <artifactId>testcontainers-redis</artifactId>
                <version>${testcontainers.redis.version}</version>
                <scope>test</scope>
            </dependency>


        </dependencies>

    </dependencyManagement>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                    <configuration>
                        <jvmArguments>
                            --enable-native-access=ALL-UNNAMED
                            --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                        </jvmArguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.3</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>


</project>
